fixed transition matrix but and created slightly different versions of q1 and q2 code.

--- a/question_2.qmd
+++ b/question_2.qmd
@@ -6,8 +6,8 @@ import pandas as pd
 
 def utility1(y: int) -> float:
     return 2 * y ** (1/2)
-def marginal_utility1(y: int) -> float:
-    return y ** (-0.5)
+def marginal_utility1(y):
+    return np.where(y > 0, y ** (-0.5), np.inf)
 
 def utility2(y: int) -> float:
     return 5 * y - 0.05 * y ** 2
@@ -17,7 +17,7 @@ def marginal_utility2(y: int) -> float:
 # Set up starting values
 stock = 1000
 
-discount_rate = 0.5
+discount_rate = 0.05
 delta = 1 / (1 + discount_rate)
 
 N = 501 # number of states
@@ -38,9 +38,9 @@ action_space_matrix = np.tile(action_space.reshape(1, nA), (N, 1)) # N x nA
 feasible_actions = action_space_matrix <= state_space_matrix
 
 utility_matrix1 = np.where(feasible_actions, 
-                            utility1(action_space_matrix), -np.inf)    
+                            utility1(action_space_matrix), -1e10)    
 utility_matrix2 = np.where(feasible_actions,
-                                utility2(action_space_matrix), -np.inf)
+                                utility2(action_space_matrix), -1e10)
 
 utility_matrix1_flat = utility_matrix1.flatten() # N * nA 1D array to use in Bellman with trnasition matrix
 utility_matrix2_flat = utility_matrix2.flatten()
@@ -50,139 +50,102 @@ update_state_matrix = state_space_matrix - action_space_matrix
 ```
 
 ```{python}
-# part (b) create new state transition matrix using interpolation
-# create  N x N * nA matrix transition matrix
+# make sparse transition matrix
 row_indices = []
 col_indices = []
 data = []
-feasible_action_count = []
-for i in range(N): # state index
-    current_state = state_space[i]
-    for j in range(nA): # action index
-        if feasible_actions[i , j]:
+
+for i in range(N):  # state index
+    for j in range(nA):  # action index
+        if feasible_actions[i, j]:
+            current_state = state_space[i]
             action = action_space[j]
-            current_state = state_space_matrix[i, j]
-            next_state = update_state_matrix[i, j]
+            next_state = current_state - action
 
-            # if next_state in state_space proceed as normal
-            if next_state in state_space:
-                next_state_index = np.where(state_space == next_state)[0][0] # state after action
-                state_action_index = j * N + next_state_index
-                col_indices.append(state_action_index)  # Column index for state-action pair
-                row_indices.append(i)
-                data.append(1) # deterministic transition
-            else:
-                next_state_index_low = np.where(state_space < next_state)[0][-1] 
-                next_state_index_high = np.where(state_space > next_state)[0][0] 
-                state_action_index_low = j * N + next_state_index_low
-                state_action_index_high = j * N + next_state_index_high
-
-                weight_low = (next_state - state_space[next_state_index_low]) / (state_space[next_state_index_high] - state_space[next_state_index_low]) 
-                weight_high = (state_space[next_state_index_high] - next_state) / (state_space[next_state_index_high] - state_space[next_state_index_low]) 
-                col_indices.append(state_action_index_low)
-                data.append(weight_low)
-                row_indices.append(i)
-
-                col_indices.append(state_action_index_high)
-                data.append(weight_high)
-                row_indices.append(i)
+            row_index = i * nA + j  # row index for (state, action)
             
-transition_matrix = csr_matrix((data, (row_indices, col_indices)), shape=(N, nA * N)) 
+            if next_state in state_space:
+                next_state_index = np.where(state_space == next_state)[0][0]
+                col_indices.append(next_state_index)
+                row_indices.append(row_index)
+                data.append(1.0)
+            else:
+                if next_state <= state_space[0]:
+                    next_state_index_low = 0
+                    next_state_index_high = 0
+                    weight_low = 1.0
+                    weight_high = 0.0
+                elif next_state >= state_space[-1]:
+                    next_state_index_low = N - 1
+                    next_state_index_high = N - 1
+                    weight_low = 1.0
+                    weight_high = 0.0
+                else:
+                    next_state_index_low = np.searchsorted(state_space, next_state, side='right') - 1
+                    next_state_index_high = next_state_index_low + 1
 
+                    s_low = state_space[next_state_index_low]
+                    s_high = state_space[next_state_index_high]
+
+                    weight_high = (next_state - s_low) / (s_high - s_low)
+                    weight_low = 1.0 - weight_high
+
+                row_indices.extend([row_index, row_index])
+                col_indices.extend([next_state_index_low, next_state_index_high])
+                data.extend([weight_low, weight_high])
+
+transition_matrix = csr_matrix((data, (row_indices, col_indices)), shape=(N * nA, N))
+
+# Bellman Function
 def bellman(v, U_flat, transition_matrix, delta, N, nA):
-    '''Evaluated RHS of bellman before max
-    - v: current value function (N, )
-    - U_flat: flattened utility matrix (N * nA, ) 
-    - transition_matrix: (N, N * nA) sparse matrix
-    - delta: dicsount factor
-    - N: number of states
-    - nA: number of actions
-    ''' # XX come back and check this
-    v_next = transition_matrix.T.dot(v)  # N * nA, 1
-    B_flat = U_flat + delta * v_next # (N * nA, 1)
-    B_sa = B_flat.reshape(N, nA)  # (N, nA) sa for state action
-    print(f"v = {v[-1]}")
-    print(f"v_next = {v_next[-1]}")
-    # print max value in v_next
-    print(f"v_next_max = {np.max(v_next)}")
-    print(f"B_flat = {B_flat[-1]}")
-    print(f"B_sa = {B_sa[-1, -1]}")
-    print(f"B_flat = {B_flat[0]}")
-    print(f"B_sa = {B_sa[0, 0]}")
+    v_next = transition_matrix.dot(v)  # (N * nA,)
+    B_flat = U_flat + delta * v_next   # (N * nA,)
+    B_sa = B_flat.reshape(N, nA)       # (N, nA)
     return B_sa
 
-# Value function iteration function
-max_iterations = 1000
-np.random.seed(454)
-
-value_function = np.random.randn(N)
-utility_matrix = utility_matrix1
-iteration = 0
-tolerance = 1e-8
+# Value Function Iteration
 def value_function_iteration(U_flat, transition_matrix, delta, N, nA, tolerance, max_iterations):
-    """
-    Performs value function iteration using the Bellman function.
-
-    Parameters:
-    - U: Utility matrix (N x nA array)
-    - next_state_indices: Next state indices matrix (N x nA array)
-    - delta: Discount factor
-    - N: Number of states
-    - nA: Number of actions
-    - tolerance: Convergence tolerance
-    - max_iterations: Maximum number of iterations
-
-    Returns:
-    - v: Value function (N x nA array)
-    - policy: Optimal action indices for each state (N x 1 array)
-    """
-    v = value_function
+    v = np.zeros(N)
     for iteration in range(max_iterations):
-        print(f'Iteration {iteration + 1}')
-        print(f"v = {v[400]}")
         B_sa = bellman(v, U_flat, transition_matrix, delta, N, nA)
-        v_new = np.max(B_sa, axis=1) # find value of best action for each state
-        print(f"V_new: : {v_new[400]}")
-        policy = np.argmax(B_sa, axis=1) # find index of best action for each state
-        print(f"Policy: {policy[500]}")
+        v_new = np.max(B_sa, axis=1)
+        policy = np.argmax(B_sa, axis=1)
         diff = np.max(np.abs(v_new - v))
-        print(f"diff = {diff}")
-        v = v_new
         if diff < tolerance:
             print(f'Converged in {iteration + 1} iterations')
             break
+        v = v_new
     else:
         print('Did not converge within max iterations')
     return v, policy
 
+# Get Optimal Transition Matrix
 def get_optimal_transition_matrix(N, nA, transition_matrix, C):
-    """
-    Constructs the optimal transition matrix Topt using the N x N * nA transition matrix.
-
-    Parameters:
-    - N: Number of states
-    - nA: Number of actions
-    - transition_matrix: N x N * nA transition matrix (sparse matrix)
-    - C: Optimal action indices for each state (array of size N)
-
-    Returns:
-    - Topt: Optimal transition matrix (N x N sparse matrix)
-    """
     row_indices = []
     col_indices = []
     data = []
 
     for i in range(N):
         optimal_action = C[i]
-        for j in range(N):
-            transition_prob = transition_matrix[i, optimal_action * N + j]
-            if transition_prob > 0:
+        row_index = i * nA + optimal_action
+        row = transition_matrix.getrow(row_index)
+        cols = row.indices
+        probs = row.data
+        for col, prob in zip(cols, probs):
+            if prob > 0:
                 row_indices.append(i)
-                col_indices.append(j)
-                data.append(transition_prob)
+                col_indices.append(col)
+                data.append(prob)
 
     Topt = csr_matrix((data, (row_indices, col_indices)), shape=(N, N))
     return Topt
+
+# Value function iteration function
+max_iterations = 1000
+np.random.seed(454)
+# start with value function  of zeros
+value_function = np.zeros(N)
+tolerance = 1e-8
 
 # Solve for utility function 1
 print("Solving for utility function 1:")
@@ -205,69 +168,72 @@ Topt_u2 = get_optimal_transition_matrix(N, nA, transition_matrix, C_u2)
 
 ```{python}
 
-# Part (i) Simulate the model for t= 80 periods
-T = 80 
-remaining_stock = stock
-extraction_path = []
-stock_path = []
-price_path = []
-
-def simulation(T, starting_stock, price_function, C, action_space, step_size):
+def simulation(T, starting_stock, price_function, C, action_space, state_space):
     remaining_stock = starting_stock
     extraction_path = []
     stock_path = []
     price_path = []
     for t in range(T):
-        print(f"Period {t + 1}: Remaining stock = {remaining_stock}")
         stock_path.append(remaining_stock)
-        current_state = int(remaining_stock / step_size)
-        if current_state >= N:
+        current_state = np.searchsorted(state_space, remaining_stock, side='right') - 1
+        if current_state < 0 or current_state >= N:
             print("Error: State index out of bounds")
             break
         action_index = C[current_state]
         action = action_space[action_index]
+        extraction_path.append(action)
+        if action == 0:
+            print(f"Action is zero at time {t}, remaining stock {remaining_stock}")
+        price = price_function(action)
+        price_path.append(price)
         remaining_stock -= action
         if remaining_stock < 0:
             break
-        extraction_path.append(action)
-        price = price_function(action)
-        price_path.append(price)
     return extraction_path, stock_path, price_path
 
 def make_extraction_plot(extraction_path, stock_path, price_path):
-    df = pd.DataFrame({'Period': np.arange(1, T + 1),
+    periods = np.arange(1, len(extraction_path) + 1)
+    df = pd.DataFrame({
+        'Period': periods,
         'Extraction': extraction_path,
-        "Price": price_path,
-        "Stock": stock_path})
+        'Price': price_path,
+        'Stock': stock_path
+    })
 
-    # Create the first chart for Extraction
     extraction_chart = alt.Chart(df).mark_line(color='blue').encode(
-        x='Period',
+        x=alt.X('Period', axis=alt.Axis(title='Period')),
         y=alt.Y('Extraction', axis=alt.Axis(title='Extraction'))
+    ).properties(
+        width=600,
+        height=200
     )
+
     price_chart = alt.Chart(df).mark_line(color='red').encode(
-        x='Period',
+        x=alt.X('Period', axis=alt.Axis(title='Period')),
         y=alt.Y('Price', axis=alt.Axis(title='Price'), scale=alt.Scale(zero=False))
-    ).transform_calculate(
-        y='datum.Price'
+    ).properties(
+        width=600,
+        height=200
     )
-    # Layer the two charts together
-    combined_chart = alt.layer(
-        extraction_chart,
-        price_chart
-    ).resolve_scale(
-        y='independent'
-    )
+
+    combined_chart = alt.vconcat(extraction_chart, price_chart)
     return combined_chart
 
-extraction_path, stock_path, price_path = simulation(T, stock, marginal_utility1, C_u1, action_space, step_size)
+# Part (i) Simulate the model for t=80 periods
+T = 80
 
+# Simulation for Utility Function 1
+extraction_path, stock_path, price_path = simulation(
+    T, stock, marginal_utility1, C_u1, action_space, state_space
+)
 chart_1 = make_extraction_plot(extraction_path, stock_path, price_path)
 
-extraction_path, stock_path, price_path = simulation(T, stock, marginal_utility2, C_u2, action_space, step_size)
+# Simulation for Utility Function 2
+extraction_path, stock_path, price_path = simulation(
+    T, stock, marginal_utility2, C_u2, action_space, state_space
+)
 chart_2 = make_extraction_plot(extraction_path, stock_path, price_path)
 
-
+# Display the charts
 chart_1 | chart_2
-
 ```
